- clean up handling of version specific static java libraries