@@ -59,17 +59,20 @@ public class LinuxTargetConfiguration extends PosixTargetConfiguration {
 
     private static final List<String> linuxLibs = Arrays.asList("z", "dl", "stdc++", "pthread");
 
-    private static final List<String> staticJavaLibs = Arrays.asList(
-            "java", "nio", "zip", "net", "prefs", "j2pkcs11", "sunec", "extnet", "fdlibm",
-            "fontmanager", "javajpeg", "lcms", "awt_headless", "awt"
-    );
     /**
-     * fdlibm no longer required, unsure since when
+     * Static Java libs required for all JDK major versions
      */
-    private static final List<String> staticJavaLibs21 = Arrays.asList(
-            "java", "nio", "zip", "net", "prefs", "j2pkcs11", "sunec", "extnet",
-            "fontmanager", "javajpeg", "lcms", "awt_headless", "awt"
-    );
+    private static final List<String> staticJavaLibsBase = List.of(
+            "java", "nio", "zip", "net", "prefs", "j2pkcs11", "extnet",
+            "fontmanager", "javajpeg", "lcms", "awt_headless", "awt");
+    /**
+     * Static Java libs required for JDK major == 11
+     */
+    private static final List<String> staticJavaLibs11 = List.of("sunec");
+    /**
+     * Static Java libs required for JDK major < 21
+     */
+    private static final List<String> staticJavaLibs20 = List.of("fdlibm");
 
     private static final List<String> staticJvmLibs = Arrays.asList(
             "jvm", "libchelper"
@@ -242,11 +245,14 @@ public class LinuxTargetConfiguration extends PosixTargetConfiguration {
         } catch (IOException ex) {
             throw new RuntimeException ("No static java libs found, cannot continue");
         }
-        List<String> libs;
-        if (projectConfiguration.getJavaVersion().getMajor() >= 21) {
-            libs = staticJavaLibs21;
-        } else {
-            libs = staticJavaLibs;
+
+        int major = projectConfiguration.getJavaVersion().getMajor();
+        List<String> libs = new ArrayList<>(staticJavaLibsBase);
+        if (major == 11) {
+            libs.addAll(staticJavaLibs11);
+        }
+        if (major < 21) {
+            libs.addAll(staticJavaLibs20);
         }
         return libs.stream()
                 .map(lib -> javaStaticLibPath.resolve("lib" + lib + ".a").toString())
